[package]
name = "stm32_telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f303vc",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.1"
static_cell = "2"

# These dependencies are required to make the dbc-codegen output work
bitvec = { version = "1.0", default-features = false }
arbitrary = { version = "1.0", optional = true }       # Enable with `arb` feature


[build-dependencies]
dbc-codegen = "0.3.0"

[features]
# `debug` stamps out Debug implementations for message in the generated CAN
# messages modules
default = ["debug"]
debug = []
